# CMakeHighsFindPackage

./: CMakeLists.txt  README.md  call_from_cpp.cc  call_highs_instance.cc
cmake/: FindHighs.cmake
